kubernetes/amazapp-eksservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazapp
spec:
  selector:
    app: amazapp
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
