kubernetes/amazapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazapp
spec:
  type: ClusterIP
  selector:
    app: amazapp
  ports:
    - port: 80
      targetPort: 5000
